feat: inform what the difference is when change detected
helm-docs check just outputs that there exists a diff, it is much more useful when it output what the diff is

--- a/.github/workflows/lint-test-chart.yaml
+++ b/.github/workflows/lint-test-chart.yaml
@@ -36,6 +36,7 @@ jobs:
           if [[ -n "$(git status --porcelain --untracked-files=no)" ]]
           then
             echo "Documentation not up to date. Please run helm-docs and commit changes!" >&2
+            git diff | cat >&2
             exit 1
           fi
 
